--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -14,7 +14,7 @@
   align-items: flex-start;
   margin-left: 150px;
   cursor: default;
-  margin-bottom: 60vh;
+  margin-bottom: 30vh;
 }
 
 .main-header-title {
@@ -35,4 +35,14 @@
 
 .tHuMbY {
   color: yellow;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  text-align: right;
+  background-color: var(--transparent);
+  font-weight: 300;
+  padding: 5px;
+  font-size: 12px;
 }
