--- a/src/styles/MainMenu.css
+++ b/src/styles/MainMenu.css
@@ -17,7 +17,7 @@
 .language-menu-item {
   padding: 10px 20px;
   cursor: pointer;
-  font-size: 2.7vh;
+  font-size: 2rem;
   text-align: center;
 }
 
