--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -12,12 +12,12 @@
   font-style: normal;
 }
 
-/*@font-face {*/
-/*    font-family: "Lato";*/
-/*    src: url("../fonts/Lato-Italic.ttf") format("truetype");*/
-/*    font-weight: 400;*/
-/*    font-style: italic;*/
-/*}*/
+@font-face {
+    font-family: "Lato";
+    src: url("../fonts/Lato-Italic.ttf") format("truetype");
+    font-weight: 400;
+    font-style: italic;
+}
 
 /*@font-face {*/
 /*    font-family: "Lato";*/
