--- a/src/styles/MainMenu.css
+++ b/src/styles/MainMenu.css
@@ -4,7 +4,6 @@
   flex-direction: row;
   justify-content: space-between;
   background-color: var(--transparent);
-
   font-weight: 300;
 }
 
@@ -13,16 +12,134 @@
   display: flex;
 }
 
-.main-menu-item,
-.language-menu-item {
+.language-menu-wrapper {
+  display: flex;
+  padding: 0 20px;
+}
+
+.divider {
+  text-align: center;
+  cursor: default;
+  padding: 10px 0;
+  font-size: var(--menu-font-size);
+}
+
+.main-menu-item {
   padding: 10px 20px;
   cursor: pointer;
-  font-size: 2rem;
   text-align: center;
+  font-size: var(--menu-font-size);
+  font-weight: 300;
+}
+
+.language-menu-item {
+  padding: 10px 5px;
+  cursor: pointer;
+  text-align: center;
+  font-size: var(--menu-font-size);
+  font-weight: 300;
 }
 
 .main-menu-item:hover,
 .language-menu-item:hover {
   color: var(--gold-accent);
   transition: color 0.3s ease;
+}
+
+/*Mobile menu*/
+
+.mobile-menu {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  background-color: var(--transparent);
+  font-weight: 300;
+  position: absolute;
+  height: 64px;
+}
+
+.mobile-menu .pages-menu {
+  background-color: var(--transparent);
+}
+
+.mobile-menu img {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-menu-button {
+  color: var(--gold-main);
+
+  border: none; /* Remove border */
+  outline: none; /* Remove outline */
+  box-shadow: none; /* Remove any shadow */
+  background-color: transparent; /* Background color */
+  cursor: pointer; /* Change cursor on hover */
+  transition: background-color 0.3s ease;
+}
+
+.mobile-menu-button:hover,
+.mobile-menu-button:focus,
+.mobile-menu-button:active {
+  color: var(--gold-accent);
+  border: none; /* Ensure no border on hover/focus/active */
+  outline: none; /* Ensure no outline on hover/focus/active */
+  box-shadow: none; /* Ensure no shadow on hover/focus/active */
+  background-color: transparent; /* Change background color on hover */
+  transition: color 0.3s ease;
+}
+
+.mobile-menu .language-menu {
+  display: flex;
+}
+
+.mobile-pages-menu {
+  width: 100%;
+  z-index: 999;
+}
+
+.mobile-menu .pages-menu {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: end;
+}
+
+.mobile-menu .main-menu-item {
+  width: fit-content;
+  cursor: pointer;
+  text-align: right;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.mobile-menu .language-menu-item {
+  font-size: 16px;
+  padding: 10px 5px;
+  align-self: center;
+}
+
+.mobile-menu .main-menu-item:hover {
+  color: var(--gold-accent);
+  transition: color 0.3s ease;
+}
+
+.mobile-menu .language-menu-wrapper {
+  display: flex;
+  padding: 10px 30px 10px 20px;
+}
+
+.mobile-menu .divider {
+  text-align: center;
+  cursor: default;
+  font-size: 16px;
+  padding: 10px 0;
+}
+
+.site-name {
+  font-size: 16px;
+  padding: 10px 10px;
+  align-self: center;
 }
