--- a/src/styles/PageContent.css
+++ b/src/styles/PageContent.css
@@ -84,3 +84,26 @@
   background-color: var(--gold-main) !important;
   border-radius: 0 !important;
 }
+
+@media only screen and (max-width: 768px) {
+  .page {
+    height: 85%;
+    top: 42%;
+  }
+
+  .page-overlay {
+    position: fixed;
+    top: 64px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--transparent);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .close-button {
+    position: relative;
+  }
+}
